--- a/src/impromptu/configs/default.toml
+++ b/src/impromptu/configs/default.toml
@@ -69,3 +69,4 @@ k = ["cursor_up"]
 "M-8" = ["switch_agent(7)"]
 "M-9" = ["switch_agent(8)"]
 "M-0" = ["switch_agent(9)"]
+"M-?" = ["show_shortcuts"]
